--- a/index.html
+++ b/index.html
@@ -241,6 +241,38 @@
                         </div>
                     </div>
                 </li>    
+                <!-- Mã #131 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma131.jpg"></div>
+                                <div class="slide"><img src="./images/ma1311.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #131 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #132 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma132.jpg"></div>
+                                <div class="slide"><img src="./images/ma1321.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #132 - ĐÃ SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>     
 
             </ul>
         </div>
